--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>Document</title>
 </head>
 <body>
-    tic-tac-toe
+    <h1>Tic Tac Toe</h1>
+    <div class="board">
+        <div class="field" id="0"></div>
+        <div class="field" id="1"></div>
+        <div class="field" id="2"></div>
+        <div class="field" id="3"></div>
+        <div class="field" id="4"></div>
+        <div class="field" id="5"></div>
+        <div class="field" id="6"></div>
+        <div class="field" id="7"></div>
+        <div class="field" id="8"></div>
+    </div>
 </body>
 </html>
