Add a dialog to display the winner

--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
         <div class="field" id="7"></div>
         <div class="field" id="8"></div>
     </div>
+    <dialog>
+        <div class="announcement"></div>
+    </dialog>
 </body>
 </html>
