--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Tic Tac Toe</h1>
-    <div class="board">
-        <div class="field" id="0"></div>
-        <div class="field" id="1"></div>
-        <div class="field" id="2"></div>
-        <div class="field" id="3"></div>
-        <div class="field" id="4"></div>
-        <div class="field" id="5"></div>
-        <div class="field" id="6"></div>
-        <div class="field" id="7"></div>
-        <div class="field" id="8"></div>
+    <div class="container">
+        <h1>Tic Tac Toe</h1>
+        <div class="board">
+            <div class="field" id="0"></div>
+            <div class="field" id="1"></div>
+            <div class="field" id="2"></div>
+            <div class="field" id="3"></div>
+            <div class="field" id="4"></div>
+            <div class="field" id="5"></div>
+            <div class="field" id="6"></div>
+            <div class="field" id="7"></div>
+            <div class="field" id="8"></div>
+        </div>
+        <dialog>
+            <div class="announcement"></div>
+        </dialog>
     </div>
-    <dialog>
-        <div class="announcement"></div>
-    </dialog>
 </body>
 </html>
