--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
     <div class="container">
         <h1>Tic Tac Toe</h1>
         <div class="board">
-            <div class="field" id="0"></div>
-            <div class="field" id="1"></div>
-            <div class="field" id="2"></div>
-            <div class="field" id="3"></div>
-            <div class="field" id="4"></div>
-            <div class="field" id="5"></div>
-            <div class="field" id="6"></div>
-            <div class="field" id="7"></div>
-            <div class="field" id="8"></div>
+            <div class="field" id="field0"></div>
+            <div class="field" id="field1"></div>
+            <div class="field" id="field2"></div>
+            <div class="field" id="field3"></div>
+            <div class="field" id="field4"></div>
+            <div class="field" id="field5"></div>
+            <div class="field" id="field6"></div>
+            <div class="field" id="field7"></div>
+            <div class="field" id="field8"></div>
         </div>
+        <button class="resetButton">Reset Game</button>
         <dialog>
-            <div class="announcement"></div>
+            <div class="dialogContainer">
+                <div class="announcement"></div>
+                <button class="newGameButton">Start a new Game</button>
+            </div>
         </dialog>
     </div>
 </body>
